[gd_scene load_steps=10 format=3 uid="uid://dd1r8qqfgvdk6"]

[ext_resource type="Script" path="res://scenes/levels/scripts/level_7.gd" id="1_lsog6"]
[ext_resource type="TileSet" uid="uid://bph8khkfunyrp" path="res://scenes/levels/resources/tiles.tres" id="2_txyre"]
[ext_resource type="PackedScene" uid="uid://ckl0n7ot1qvna" path="res://scenes/utils/multitarget_camera.tscn" id="3_jg67v"]
[ext_resource type="PackedScene" uid="uid://b6t1fmlc7s4og" path="res://scenes/player/player.tscn" id="3_nra60"]
[ext_resource type="PackedScene" uid="uid://dytd5g5foi3ka" path="res://scenes/objects/player_gate.tscn" id="5_hokdq"]
[ext_resource type="PackedScene" uid="uid://ca3ykvqmarsvn" path="res://scenes/objects/button.tscn" id="6_73hfc"]
[ext_resource type="PackedScene" uid="uid://bxqg0b4ysehvc" path="res://scenes/objects/death_area.tscn" id="7_ludew"]
[ext_resource type="PackedScene" uid="uid://dyb0fht7d2j5b" path="res://scenes/objects/checkpoint.tscn" id="8_j68tf"]
[ext_resource type="PackedScene" uid="uid://jqpxcgo7u3dk" path="res://scenes/objects/goal.tscn" id="9_e0urc"]

[node name="Level_7" type="Node2D"]
script = ExtResource("1_lsog6")
next_level = "8"

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("2_txyre")
format = 2
layer_0/tile_data = PackedInt32Array(458756, 131073, 1, 393220, 131073, 0, 458755, 65537, 1, 393219, 65537, 0, 458754, 65537, 1, 393218, 65537, 0, 458753, 65537, 1, 393217, 65537, 0, 458752, 65537, 1, 393216, 65537, 0, 524287, 65537, 1, 458751, 65537, 0, 524286, 65537, 1, 458750, 65537, 0, 524285, 65537, 1, 458749, 65537, 0, 524284, 65537, 1, 458748, 65537, 0, 524283, 1, 1, 458747, 1, 0, 786418, 131073, 2, 720882, 131073, 1, 655346, 131073, 1, 589810, 131073, 1, 524274, 131073, 1, 458738, 131073, 1, 393202, 131073, 1, 327666, 131073, 1, 262130, 131073, 0, 786417, 65537, 2, 720881, 65537, 1, 655345, 65537, 1, 589809, 65537, 1, 524273, 65537, 1, 458737, 65537, 1, 393201, 65537, 1, 327665, 65537, 1, 262129, 65537, 0, 720910, 65537, 2, 655374, 65537, 1, 589838, 65537, 1, 524302, 65537, 1, 458766, 65537, 1, 393230, 65537, 1, 327694, 65537, 1, 262158, 65537, 1, 196622, 65537, 0, 720909, 1, 2, 655373, 1, 1, 589837, 1, 1, 524301, 1, 1, 458765, 1, 1, 393229, 1, 1, 327693, 1, 1, 262157, 1, 1, 196621, 1, 0, 1638396, 131073, 2, 1572860, 131073, 1, 1507324, 131073, 0, 1638395, 65537, 2, 1572859, 65537, 1, 1507323, 65537, 0, 1638394, 65537, 2, 1572858, 65537, 1, 1507322, 65537, 0, 1638393, 1, 65536, 1572857, 65537, 1, 1507321, 65537, 0, 1638392, 1, 1, 1572856, 1, 1, 1507320, 1, 0, 1572871, 131073, 1, 1507335, 131073, 1, 1441799, 131073, 0, 1572870, 131073, 65536, 1507334, 65537, 1, 1441798, 65537, 0, 1572869, 65537, 2, 1507333, 65537, 1, 1441797, 65537, 0, 1572868, 65537, 2, 1507332, 65537, 1, 1441796, 65537, 0, 1572867, 1, 2, 1507331, 1, 1, 1441795, 1, 0, 786416, 65537, 2, 720880, 65537, 1, 655344, 65537, 1, 589808, 65537, 1, 524272, 65537, 1, 458736, 65537, 1, 393200, 65537, 1, 327664, 65537, 1, 262128, 65537, 0, 720911, 65537, 2, 655375, 65537, 1, 589839, 65537, 1, 524303, 65537, 1, 458767, 65537, 1, 393231, 65537, 1, 327695, 65537, 1, 262159, 65537, 1, 196623, 65537, 0, -65533, 131073, 2, -131069, 131073, 1, -196605, 131073, 1, -262141, 131073, 1, -327677, 131073, 1, -393213, 131073, 0, -65534, 65537, 2, -131070, 65537, 1, -196606, 131073, 65538, -262142, 1, 1, -327678, 131073, 65536, -393214, 65537, 0, -65535, 65537, 2, -131071, 65537, 1, -196607, 65537, 0, -327679, 65537, 2, -393215, 65537, 0, -65536, 65537, 2, -131072, 65537, 1, -196608, 1, 65538, -262144, 131073, 1, -327680, 1, 65536, -393216, 65537, 0, -1, 65537, 2, -65537, 65537, 1, -131073, 131073, 65538, -196609, 1, 1, -262145, 131073, 65536, -327681, 65537, 0, -2, 65537, 2, -65538, 65537, 1, -131074, 65537, 0, -262146, 65537, 2, -327682, 65537, 0, -3, 65537, 2, -65539, 65537, 1, -131075, 1, 65538, -196611, 131073, 1, -262147, 1, 65536, -327683, 65537, 0, -4, 1, 2, -65540, 1, 1, -131076, 1, 1, -196612, 1, 1, -262148, 1, 1, -327684, 1, 0, 786415, 65537, 2, 720879, 65537, 1, 655343, 65537, 1, 589807, 65537, 1, 524271, 65537, 1, 458735, 65537, 1, 393199, 65537, 1, 327663, 65537, 1, 262127, 65537, 0, 786414, 1, 65536, 720878, 65537, 1, 655342, 65537, 1, 589806, 65537, 1, 524270, 65537, 1, 458734, 65537, 1, 393198, 65537, 1, 327662, 65537, 1, 262126, 65537, 0, 720913, 131073, 65536, 655377, 65537, 1, 589841, 65537, 1, 524305, 65537, 1, 458769, 65537, 1, 393233, 65537, 1, 327697, 65537, 1, 262161, 65537, 1, 196625, 65537, 0, 720912, 65537, 2, 655376, 65537, 1, 589840, 65537, 1, 524304, 65537, 1, 458768, 65537, 1, 393232, 65537, 1, 327696, 65537, 1, 262160, 65537, 1, 196624, 65537, 0, 1638417, 65537, 1, 1572881, 65537, 1, 1507345, 65537, 1, 1441809, 131073, 65538, 1638416, 65537, 1, 1572880, 65537, 1, 1507344, 65537, 1, 1441808, 65537, 0, 1638415, 65537, 1, 1572879, 65537, 1, 1507343, 65537, 1, 1441807, 65537, 0, 1638414, 65537, 1, 1572878, 65537, 1, 1507342, 65537, 1, 1441806, 65537, 0, 1638413, 131073, 65536, 1572877, 131073, 65538, 1507341, 1, 1, 1441805, 1, 0, 1638386, 1, 65538, 1572850, 131073, 1, 1507314, 131073, 0, 1638385, 65537, 1, 1572849, 65537, 1, 1507313, 65537, 0, 1638384, 65537, 1, 1572848, 65537, 1, 1507312, 65537, 0, 1638383, 65537, 1, 1572847, 65537, 1, 1507311, 65537, 0, 1638382, 65537, 1, 1572846, 65537, 1, 1507310, 1, 65538, 1703922, 1, 65536, 1703921, 65537, 1, 1703920, 65537, 1, 1703919, 65537, 1, 1703918, 65537, 1, 1703953, 65537, 2, 1703952, 65537, 2, 1703951, 65537, 2, 1703950, 1, 65536, 1703949, 1, 1, 1769458, 131073, 1, 1769457, 131073, 65536, 1769456, 65537, 2, 1769455, 65537, 2, 1769454, 65537, 2, 1703955, 131073, 1, 1638419, 131073, 1, 1572883, 131073, 1, 1507347, 131073, 1, 1441811, 131073, 1, 1376275, 131073, 1, 1310739, 131073, 1, 1245203, 131073, 1, 1179667, 131073, 1, 1114131, 131073, 1, 1048595, 131073, 1, 983059, 131073, 1, 917523, 131073, 1, 851987, 131073, 1, 786451, 131073, 1, 720915, 131073, 1, 655379, 131073, 1, 589843, 131073, 1, 524307, 131073, 1, 458771, 131073, 1, 393235, 131073, 1, 327699, 131073, 1, 262163, 131073, 1, 196627, 131073, 1, 1703954, 131073, 65536, 1638418, 65537, 1, 1572882, 65537, 1, 1507346, 65537, 1, 1441810, 65537, 1, 1376274, 65537, 1, 1310738, 65537, 1, 1245202, 65537, 1, 1179666, 65537, 1, 1114130, 65537, 1, 1048594, 65537, 1, 983058, 65537, 1, 917522, 65537, 1, 851986, 65537, 1, 786450, 65537, 1, 720914, 65537, 1, 655378, 65537, 1, 589842, 65537, 1, 524306, 65537, 1, 458770, 65537, 1, 393234, 65537, 1, 327698, 65537, 1, 262162, 65537, 1, 196626, 131073, 65538, 1376273, 1, 1, 1310737, 1, 1, 1245201, 1, 1, 1179665, 1, 1, 1114129, 1, 1, 1048593, 1, 1, 983057, 1, 1, 917521, 1, 1, 851985, 1, 1, 786449, 1, 1, 1769453, 1, 65536, 1703917, 65537, 1, 1638381, 65537, 1, 1572845, 65537, 1, 1507309, 65537, 1, 1441773, 65537, 1, 1376237, 65537, 1, 1310701, 65537, 1, 1245165, 65537, 1, 1179629, 65537, 1, 1114093, 65537, 1, 1048557, 65537, 1, 983021, 65537, 1, 917485, 65537, 1, 851949, 65537, 1, 786413, 65537, 1, 720877, 65537, 1, 655341, 65537, 1, 589805, 65537, 1, 524269, 65537, 1, 458733, 65537, 1, 393197, 65537, 1, 327661, 65537, 1, 262125, 1, 65538, 1769452, 1, 1, 1703916, 1, 1, 1638380, 1, 1, 1572844, 1, 1, 1507308, 1, 1, 1441772, 1, 1, 1376236, 1, 1, 1310700, 1, 1, 1245164, 1, 1, 1179628, 1, 1, 1114092, 1, 1, 1048556, 1, 1, 983020, 1, 1, 917484, 1, 1, 851948, 1, 1, 786412, 1, 1, 720876, 1, 1, 655340, 1, 1, 589804, 1, 1, 524268, 1, 1, 458732, 1, 1, 393196, 1, 1, 327660, 1, 1, 262124, 1, 1, 1441774, 131073, 1, 1376238, 131073, 1, 1310702, 131073, 1, 1245166, 131073, 1, 1179630, 131073, 1, 1114094, 131073, 1, 1048558, 131073, 1, 983022, 131073, 1, 917486, 131073, 1, 851950, 131073, 1, 1114116, 131073, 2, 1048580, 131073, 1, 983044, 131073, 1, 917508, 131073, 1, 851972, 131073, 1, 786436, 131073, 1, 720900, 131073, 1, 655364, 131073, 1, 589828, 131073, 1, 524292, 131073, 1, 1114115, 65537, 2, 1048579, 65537, 1, 983043, 65537, 1, 917507, 65537, 1, 851971, 65537, 1, 786435, 65537, 1, 720899, 65537, 1, 655363, 65537, 1, 589827, 65537, 1, 524291, 65537, 1, 1114114, 65537, 2, 1048578, 65537, 1, 983042, 65537, 1, 917506, 65537, 1, 851970, 65537, 1, 786434, 65537, 1, 720898, 65537, 1, 655362, 65537, 1, 589826, 65537, 1, 524290, 65537, 1, 1114113, 65537, 2, 1048577, 65537, 1, 983041, 65537, 1, 917505, 65537, 1, 851969, 65537, 1, 786433, 65537, 1, 720897, 65537, 1, 655361, 65537, 1, 589825, 65537, 1, 524289, 65537, 1, 1114112, 65537, 2, 1048576, 65537, 1, 983040, 65537, 1, 917504, 65537, 1, 851968, 65537, 1, 786432, 65537, 1, 720896, 65537, 1, 655360, 65537, 1, 589824, 65537, 1, 524288, 65537, 1, 1179647, 65537, 2, 1114111, 65537, 1, 1048575, 65537, 1, 983039, 65537, 1, 917503, 65537, 1, 851967, 65537, 1, 786431, 65537, 1, 720895, 65537, 1, 655359, 65537, 1, 589823, 65537, 1, 1179646, 65537, 2, 1114110, 65537, 1, 1048574, 65537, 1, 983038, 65537, 1, 917502, 65537, 1, 851966, 65537, 1, 786430, 65537, 1, 720894, 65537, 1, 655358, 65537, 1, 589822, 65537, 1, 1179645, 65537, 2, 1114109, 65537, 1, 1048573, 65537, 1, 983037, 65537, 1, 917501, 65537, 1, 851965, 65537, 1, 786429, 65537, 1, 720893, 65537, 1, 655357, 65537, 1, 589821, 65537, 1, 1179644, 65537, 2, 1114108, 65537, 1, 1048572, 65537, 1, 983036, 65537, 1, 917500, 65537, 1, 851964, 65537, 1, 786428, 65537, 1, 720892, 65537, 1, 655356, 65537, 1, 589820, 65537, 1, 1179643, 1, 2, 1114107, 1, 1, 1048571, 1, 1, 983035, 1, 1, 917499, 1, 1, 851963, 1, 1, 786427, 1, 1, 720891, 1, 1, 655355, 1, 1, 589819, 1, 1, 196589, 131073, 1, 131053, 131073, 1, 65517, 131073, 1, -19, 131073, 1, -65555, 131073, 1, -131091, 131073, 0, 196588, 1, 1, 131052, 1, 1, 65516, 1, 1, -20, 1, 1, -65556, 1, 1, -131092, 1, 0, 131091, 131073, 1, 65555, 131073, 1, 19, 131073, 1, -65517, 131073, 1, -131053, 131073, 1, -196589, 131073, 0, 131090, 1, 1, 65554, 1, 1, 18, 1, 1, -65518, 1, 1, -131054, 1, 1, -196590, 1, 0, 1835015, 131073, 1, 1769479, 1, 65536, 1703943, 1, 65538, 1638407, 131073, 1, 1835014, 1, 1, 1769478, 1, 1, 1703942, 1, 1, 1638406, 1, 1, 1835001, 131073, 1, 1769465, 131073, 1, 1703929, 131073, 1, 1835000, 131073, 65536, 1769464, 131073, 65538, 1703928, 1, 1, 1900537, 131073, 1, 1900536, 1, 1, 2818041, 131073, 2, 2752505, 131073, 1, 2686969, 131073, 1, 2621433, 131073, 1, 2555897, 131073, 1, 2490361, 131073, 1, 2424825, 131073, 1, 2359289, 131073, 1, 2293753, 131073, 1, 2228217, 131073, 1, 2162681, 131073, 1, 2097145, 131073, 1, 2031609, 131073, 1, 1966073, 131073, 1, 2818040, 1, 2, 2752504, 1, 1, 2686968, 1, 1, 2621432, 1, 1, 2555896, 1, 1, 2490360, 1, 1, 2424824, 131073, 65536, 2359288, 65537, 1, 2293752, 65537, 1, 2228216, 65537, 1, 2162680, 65537, 1, 2097144, 65537, 1, 2031608, 131073, 65538, 1966072, 1, 1, 2752519, 131073, 2, 2686983, 131073, 1, 2621447, 131073, 1, 2555911, 131073, 1, 2490375, 131073, 1, 2424839, 131073, 1, 2359303, 1, 65536, 2293767, 65537, 1, 2228231, 65537, 1, 2162695, 65537, 1, 2097159, 65537, 1, 2031623, 65537, 1, 1966087, 1, 65538, 1900551, 131073, 1, 2752518, 1, 2, 2686982, 1, 1, 2621446, 1, 1, 2555910, 1, 1, 2490374, 1, 1, 2424838, 1, 1, 2359302, 1, 1, 2293766, 1, 1, 2228230, 1, 1, 2162694, 1, 1, 2097158, 1, 1, 2031622, 1, 1, 1966086, 1, 1, 1900550, 1, 1, 3080200, 65537, 2, 3014664, 65537, 0, 3080199, 65537, 2, 3014663, 65537, 0, 3080198, 65537, 2, 3014662, 65537, 0, 3080197, 65537, 2, 3014661, 65537, 0, 3080196, 65537, 2, 3014660, 65537, 0, 3080195, 65537, 2, 3014659, 65537, 0, 3080194, 65537, 2, 3014658, 65537, 0, 3080193, 65537, 2, 3014657, 65537, 0, 3080192, 65537, 2, 3014656, 65537, 0, 3145727, 65537, 2, 3080191, 65537, 0, 3145726, 65537, 2, 3080190, 65537, 0, 3145725, 65537, 2, 3080189, 65537, 0, 3145724, 65537, 2, 3080188, 65537, 0, 3145723, 65537, 2, 3080187, 65537, 0, 3145722, 65537, 2, 3080186, 65537, 0, 3145721, 65537, 2, 3080185, 65537, 0, 3145720, 65537, 2, 3080184, 65537, 0, 3145719, 65537, 2, 3080183, 65537, 0, 3145718, 1, 2, 3080182, 1, 0, 3080201, 131073, 2, 3014665, 131073, 0, 3342342, 131073, 2, 3276806, 131073, 0, 3342341, 65537, 2, 3276805, 65537, 0, 3342340, 65537, 2, 3276804, 65537, 0, 3342339, 1, 65536, 3276803, 65537, 0, 3342338, 1, 1, 3276802, 1, 0, 3407869, 131073, 1, 3342333, 131073, 0, 3407868, 131073, 65536, 3342332, 65537, 0, 3407867, 65537, 2, 3342331, 65537, 0, 3407866, 65537, 2, 3342330, 65537, 0, 3407865, 1, 2, 3342329, 1, 0, 3473422, 131073, 2, 3407886, 131073, 0, 3473421, 65537, 2, 3407885, 65537, 0, 3473420, 65537, 2, 3407884, 65537, 0, 3538931, 65537, 2, 3473395, 65537, 0, 3538930, 65537, 2, 3473394, 65537, 0, 3538929, 1, 2, 3473393, 1, 0, 3538932, 131073, 2, 3473396, 131073, 0, 3473419, 1, 2, 3407883, 1, 0, 3604477, 131073, 1, 3538941, 131073, 1, 3473405, 131073, 1, 3604476, 131073, 65538, 3538940, 1, 1, 3473404, 1, 1, 3604483, 65537, 2, 3538947, 1, 65538, 3473411, 131073, 1, 3407875, 131073, 1, 3604482, 1, 2, 3538946, 1, 1, 3473410, 1, 1, 3407874, 1, 1, 3735566, 131073, 1, 3670030, 131073, 0, 3735565, 131073, 65536, 3670029, 65537, 0, 3735564, 65537, 2, 3670028, 65537, 0, 3735563, 65537, 2, 3670027, 65537, 0, 3735562, 65537, 2, 3670026, 65537, 0, 3735561, 65537, 2, 3670025, 65537, 0, 3735560, 65537, 2, 3670024, 1, 65538, 3735559, 1, 2, 3670023, 131073, 65536, 3670022, 1, 2, 3735545, 131073, 2, 3801080, 131073, 2, 3735544, 1, 65536, 3801079, 65537, 2, 3735543, 131073, 65538, 3801078, 65537, 2, 3735542, 65537, 0, 3801077, 65537, 2, 3735541, 65537, 0, 3801076, 65537, 2, 3735540, 65537, 0, 3801075, 65537, 2, 3735539, 65537, 0, 3801074, 1, 65536, 3735538, 65537, 0, 3801073, 1, 1, 3735537, 1, 0, 4063218, 65537, 2, 3997682, 1, 65538, 3932146, 131073, 1, 3866610, 131073, 1, 4063217, 1, 2, 3997681, 1, 1, 3932145, 1, 1, 3866609, 1, 1, 4063224, 65537, 2, 3997688, 65537, 0, 4063223, 65537, 2, 3997687, 65537, 0, 4063222, 65537, 2, 3997686, 65537, 0, 4063221, 65537, 2, 3997685, 65537, 0, 4063220, 65537, 2, 3997684, 65537, 0, 4063219, 65537, 2, 3997683, 65537, 0, 4063225, 131073, 2, 3997689, 131073, 0, 3670009, 1, 65536, 3670008, 131073, 65538, 3604473, 65537, 0, 3604472, 1, 0, 3604487, 1, 65538, 3604486, 131073, 65536, 3538950, 65537, 0, 3604475, 65537, 0, 3604474, 65537, 0, 3604485, 65537, 2, 3538949, 65537, 0, 3604484, 65537, 2, 3538948, 65537, 0, 4259854, 131073, 1, 4194318, 131073, 1, 4259853, 1, 1, 4194317, 1, 1, 4128782, 131073, 1, 4063246, 131073, 1, 3997710, 131073, 1, 3932174, 131073, 1, 3866638, 131073, 1, 3801102, 131073, 1, 4128781, 1, 1, 4063245, 1, 1, 3997709, 1, 1, 3932173, 1, 1, 3866637, 1, 1, 3801101, 1, 1, 4390926, 131073, 2, 4325390, 131073, 1, 4390925, 65537, 2, 4325389, 131073, 65538, 3670013, 131073, 2, 3670012, 65537, 2, 3670011, 65537, 2, 3670010, 65537, 2, 2162698, 131073, 1, 2097162, 131073, 0, 2162697, 65537, 1, 2097161, 65537, 0, 1703923, 131073, 2, 1638387, 131073, 0, 2424823, 65537, 2, 2359287, 65537, 1, 2424822, 65537, 2, 2359286, 65537, 1, 2424821, 65537, 2, 2359285, 131073, 65538, 2424820, 65537, 2, 2359284, 65537, 0, 2424819, 65537, 2, 2359283, 65537, 0, 2424818, 65537, 2, 2359282, 65537, 0, 2424817, 65537, 2, 2359281, 65537, 0, 2424816, 65537, 2, 2359280, 1, 65538, 2424815, 65537, 2, 2359279, 65537, 1, 2424814, 65537, 2, 2359278, 65537, 1, 2424813, 65537, 2, 2359277, 65537, 1, 2424812, 1, 2, 2359276, 1, 1, 2359315, 131073, 2, 2293779, 131073, 1, 2359314, 65537, 2, 2293778, 65537, 1, 2359313, 65537, 2, 2293777, 65537, 1, 2359312, 65537, 2, 2293776, 65537, 1, 2359311, 65537, 2, 2293775, 131073, 65538, 2359310, 65537, 2, 2293774, 65537, 0, 2359309, 65537, 2, 2293773, 65537, 0, 2359308, 65537, 2, 2293772, 65537, 0, 2359307, 65537, 2, 2293771, 65537, 0, 2359306, 65537, 2, 2293770, 1, 65538, 2359305, 65537, 2, 2293769, 65537, 1, 2359304, 65537, 2, 2293768, 65537, 1, 2228243, 131073, 1, 2162707, 131073, 1, 2097171, 131073, 1, 2031635, 131073, 1, 1966099, 131073, 1, 1900563, 131073, 1, 1835027, 131073, 1, 1769491, 131073, 1, 2228242, 131073, 65538, 2162706, 1, 1, 2097170, 1, 1, 2031634, 1, 1, 1966098, 1, 1, 1900562, 1, 1, 1835026, 1, 1, 1769490, 1, 1, 2293741, 1, 65538, 2228205, 131073, 1, 2162669, 131073, 1, 2097133, 131073, 1, 2031597, 131073, 1, 1966061, 131073, 1, 1900525, 131073, 1, 1834989, 131073, 1, 2293740, 1, 1, 2228204, 1, 1, 2162668, 1, 1, 2097132, 1, 1, 2031596, 1, 1, 1966060, 1, 1, 1900524, 1, 1, 1834988, 1, 1, 4390924, 65537, 2, 4325388, 65537, 0, 4390923, 65537, 2, 4325387, 65537, 0, 4390922, 65537, 2, 4325386, 65537, 0, 4390921, 65537, 2, 4325385, 65537, 0, 4390920, 65537, 2, 4325384, 65537, 0, 4390919, 65537, 2, 4325383, 65537, 0, 4390918, 65537, 2, 4325382, 65537, 0, 4390917, 65537, 2, 4325381, 65537, 0, 4390916, 65537, 2, 4325380, 65537, 0, 4390915, 65537, 2, 4325379, 65537, 0, 3670007, 1, 0, 3538951, 131073, 0, 3604488, 131073, 0, 2162696, 65537, 1, 2097160, 1, 65538, 2228241, 65537, 0, 2228240, 65537, 0, 2228239, 1, 0, 2031624, 131073, 1, 1966088, 131073, 0, 1900557, 65537, 2, 1835021, 131073, 65538, 1900556, 1, 2, 1835020, 1, 0, 1900558, 131073, 2, 1835022, 131073, 1, 1769486, 131073, 1, 1769485, 1, 1, 1769480, 131073, 2, 1703944, 131073, 0, 1638412, 1, 2, 1572876, 1, 0, 2228234, 131073, 1, 2228233, 65537, 1, 2228232, 65537, 1, 1900530, 1, 65538, 1834994, 131073, 1, 1900529, 1, 1, 1834993, 1, 1, 1966067, 131073, 2, 1966066, 65537, 2, 1966065, 1, 2, 1900531, 131073, 0, 1834999, 1, 2, 1769463, 1, 0, 2293751, 65537, 1, 2228215, 65537, 1, 2162679, 131073, 65538, 2097143, 1, 1, 2031607, 1, 0, 2293750, 65537, 1, 2228214, 65537, 1, 2162678, 65537, 0, 2293749, 1, 1, 2228213, 1, 1, 2162677, 1, 0, 2293744, 131073, 0, 2293743, 65537, 0, 2293742, 65537, 0, 4390914, 1, 2, 4325378, 1, 0)

[node name="MultitargetCamera" parent="." instance=ExtResource("3_jg67v")]
position = Vector2(0, 192)

[node name="P1Button1" parent="." instance=ExtResource("6_73hfc")]
position = Vector2(-992, 160)
player_target = 1

[node name="P2Button1" parent="." instance=ExtResource("6_73hfc")]
position = Vector2(992, 160)
player_target = 2

[node name="P1Gate1" parent="." instance=ExtResource("5_hokdq")]
position = Vector2(-576, 448)
gate_length = 544.0
player_target = 1

[node name="P1Gate3" parent="." instance=ExtResource("5_hokdq")]
position = Vector2(-576, 496)
gate_length = 544.0
player_target = 2

[node name="P2Gate1" parent="." instance=ExtResource("5_hokdq")]
position = Vector2(576, 448)
gate_length = 544.0
player_target = 2

[node name="P2Gate3" parent="." instance=ExtResource("5_hokdq")]
position = Vector2(576, 496)
gate_length = 544.0
player_target = 1

[node name="P1Button2" parent="." instance=ExtResource("6_73hfc")]
position = Vector2(984, 1376)
player_target = 1

[node name="P2Button2" parent="." instance=ExtResource("6_73hfc")]
position = Vector2(-992, 1376)
player_target = 2

[node name="P1Gate2" parent="." instance=ExtResource("5_hokdq")]
position = Vector2(0, 1456)
gate_length = 416.0
player_target = 1

[node name="P2Gate2" parent="." instance=ExtResource("5_hokdq")]
position = Vector2(0, 1488)
gate_length = 416.0
player_target = 2

[node name="P1Checkpoint1" parent="." instance=ExtResource("8_j68tf")]
position = Vector2(-448, 2952)
player_target = 1

[node name="P2Checkpoint1" parent="." instance=ExtResource("8_j68tf")]
position = Vector2(440, 2952)
player_target = 2

[node name="DeathArea3" parent="." instance=ExtResource("7_ludew")]
position = Vector2(0.00012207, 4424)
scale = Vector2(243.677, 2.28403)

[node name="Goal" parent="." instance=ExtResource("9_e0urc")]
position = Vector2(-704, 3808)
collision_mask = 2
player_target = 1

[node name="Goal2" parent="." instance=ExtResource("9_e0urc")]
position = Vector2(704, 4192)
collision_mask = 4
player_target = 2

[node name="Player1Spawn" type="Marker2D" parent="."]
position = Vector2(-128, 192)

[node name="Player2Spawn" type="Marker2D" parent="."]
position = Vector2(128, 192)

[node name="Player1" parent="." node_paths=PackedStringArray("respawn_marker") instance=ExtResource("3_nra60")]
position = Vector2(-128, 240)
collision_layer = 2
collision_mask = 41049
player_num = 1
respawn_marker = NodePath("../Player1Spawn")

[node name="Player2" parent="." node_paths=PackedStringArray("respawn_marker") instance=ExtResource("3_nra60")]
position = Vector2(128, 240)
collision_layer = 4
collision_mask = 41017
player_num = 2
respawn_marker = NodePath("../Player2Spawn")

[connection signal="pressed" from="P1Button1" to="." method="_on_p_1_button_1_pressed"]
[connection signal="pressed" from="P2Button1" to="." method="_on_p_2_button_1_pressed"]
[connection signal="pressed" from="P1Button2" to="." method="_on_p_1_button_2_pressed"]
[connection signal="pressed" from="P2Button2" to="." method="_on_p_2_button_2_pressed"]
